1999-06-05  Harri Porten  <porten@kde.org>

	* pppstats.cpp: dropping the ifr_name #define hack allows compilation
	with --enable-final (saves 20 kB size)

1999-05-30  Harri Porten  <porten@kde.org>

	* connect.cpp: skip setting the volume if command is empty
	* switched from KWizard to QWizard
	* adaption to new KConfig iterators
	* partly switched to KStandardDirs

1999-05-07  Harri Porten  <porten@kde.org>

	* main.cpp: added public showStats() slot. Saved methods and p_kppp
	pointers in DockWidget and ConWindow.

1999-05-07  Harri Porten  <porten@kde.org>

	* renamed shutDown to myShutDown to avoid name clash with KApp
	* runtests.cpp: better error message for missing s-bit.

1999-05-04  Harri Porten  <porten@kde.org>

	* conwindow.cpp: fixed deleting of old geometry layout
	* pppstats.cpp: bundled statistic in a module. Removed unused
	get_ppp_cstats() and some variables. The modem animations are triggered
	by signals from the PPPStats object.
	* logview/main.cpp: had to replace QTabDialog with QTabWidget
	
1999-04-25  Harri Porten  <porten@kde.org>

	* runtests.cpp: test for `lock' in /etc/ppp/options is not needed any-
	more, thanks to a hint from Paul Mackeras (pppd). Leaving away ttySx
	(99/04/10) from the command line and binding stdin/stdout to the
	device (99/01/12) stops pppd from trying to lock the device itself.

1999-04-12  Harri Porten  <porten@kde.org>

	* opener.cpp: introduced MY_ASSERT macro. We don't want to see our
	security checks disabled by the NDEBUG flag.
	* connect.cpp: fixed timeout errors that were caused by a re-enabled
	socket notifier that took away data from pppd.
	Thanks to Ian Gordon <ig@cs.strath.ac.uk> for tracking down this bug.
	* requester.cpp: setpppdRunning(false) _before_ killing the pppd.
	* main.cpp: added flushX() before every command_execute()
	* increased maximum modem string size
	* connect.cpp: stop the main loop from skipping characters. Parsing
	the connect speed should work now.
	